--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
   <!-- About screen blog label -->
   <string name="About.blog">博客</string>
   <!-- About screen footer -->
-  <string name="About.footer">由萊特幣基金會的萊特錢包團隊製作\n%1$s</string>
+  <string name="About.footer">由伊欸瑟派的地球錢包團隊製作\n%1$s</string>
   <!-- Privay Policy button label -->
   <string name="About.privacy">隐私政策</string>
   <!-- About screen reddit label -->
@@ -23,7 +23,7 @@
   <!-- Loading Wallet Message -->
   <string name="Account.loadingMessage">正在加载钱包</string>
   <!-- Default wallet name -->
-  <string name="AccountHeader.defaultWalletName">我的 Loaf</string>
+  <string name="AccountHeader.defaultWalletName">我的 eacpay</string>
   <!-- Equals symbol -->
   <string name="AccountHeader.equals">=</string>
   <!-- Manage wallet button title -->
@@ -33,9 +33,9 @@
   <!-- Error alert title -->
   <string name="Alert.error">错误</string>
   <!-- Keystore error -->
-  <string name="Alert.keystore.generic.android">您的安卓操作系统密钥库存在问题，请联系contact@loafwallet.org</string>
+  <string name="Alert.keystore.generic.android">您的安卓操作系统密钥库存在问题，请联系connact@eacpay.com</string>
   <!-- KeyStore error, keys are invalidated -->
-  <string name="Alert.keystore.invalidated.android">您的 Loaf 加密数据最近因为您的安卓系统屏幕锁定被禁用而失效。</string>
+  <string name="Alert.keystore.invalidated.android">您的 eacpay 加密数据最近因为您的安卓系统屏幕锁定被禁用而失效。</string>
   <!-- Keystore error title -->
   <string name="Alert.keystore.title.android">安卓系统密钥库错误</string>
   <!-- No internet alert message -->
@@ -89,7 +89,7 @@
   <!-- Approve button label -->
   <string name="BitID.approve">批准</string>
   <!-- <sitename> is requesting authentication using your bitcoin wallet -->
-  <string name="BitID.authenticationRequest">%1$s 正使用您的莱特币钱包请求验证</string>
+  <string name="BitID.authenticationRequest">%1$s 正使用您的地球币钱包请求验证</string>
   <!-- Deny button label -->
   <string name="BitID.deny">拒绝</string>
   <!-- BitID error alert title -->
@@ -141,7 +141,7 @@
   <!-- Word label eg. Word #1, Word #2 -->
   <string name="ConfirmPaperPhrase.word">单词#%1$s</string>
   <!-- Litecoin denomination picker label -->
-  <string name="DefaultCurrency.litecoinLabel">莱特币显示单位</string>
+  <string name="DefaultCurrency.litecoinLabel">地球币显示单位</string>
   <!-- Exchange rate label -->
   <string name="DefaultCurrency.rateLabel">汇率</string>
   <!-- Email unavailable alert title -->
@@ -215,9 +215,9 @@
   <!-- Ignore jailbreak warning button -->
   <string name="JailbreakWarnings.ignore">忽略</string>
   <!-- Jailbreak warning message -->
-  <string name="JailbreakWarnings.messageWithBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Loaf 的密钥链数据并盗取您的莱特币！立即擦除这个钱包并在一台安全设备上进行恢复。</string>
+  <string name="JailbreakWarnings.messageWithBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Eacpay 的密钥链数据并盗取您的地球币！立即擦除这个钱包并在一台安全设备上进行恢复。</string>
   <!-- Jailbreak warning message -->
-  <string name="JailbreakWarnings.messageWithoutBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Loaf 的密钥链数据并盗取您的莱特币！请您仅在未越狱设备上使用 Loaf 。</string>
+  <string name="JailbreakWarnings.messageWithoutBalance">设备安全性受损\n任何\'越狱\'应用都可能访问 Eacpay 的密钥链数据并盗取您的地球币！请您仅在未越狱设备上使用 Loaf 。</string>
   <!-- Jailbreak warning title -->
   <string name="JailbreakWarnings.title">警告</string>
   <!-- Wipe wallet button -->
@@ -235,7 +235,7 @@
   <!-- Manage wallet modal title -->
   <string name="ManageWallet.title">管理钱包</string>
   <!-- Buy bitcoin title -->
-  <string name="MenuButton.buy">购买莱特币</string>
+  <string name="MenuButton.buy">购买地球币</string>
   <!-- Menu button title -->
   <string name="MenuButton.lock">锁住钱包</string>
   <!-- Menu button title -->
@@ -243,7 +243,7 @@
   <!-- Menu button title -->
   <string name="MenuButton.settings">设置</string>
   <!-- Menu button title -->
-  <string name="MenuButton.support">支持:       litewallet@litecoinfoundation.net</string>
+  <string name="MenuButton.support">支持:       dev@eacpay.com</string>
   <!-- button label -->
   <string name="MenuViewController.createButton">创建新的钱包</string>
   <!-- Menu modal title -->
@@ -267,7 +267,7 @@
   <!-- Node status label -->
   <string name="NodeSelector.statusLabel">节点连接状态</string>
   <!-- Node Selector view title -->
-  <string name="NodeSelector.title">莱特币节点</string>
+  <string name="NodeSelector.title">地球币节点</string>
   <!-- Bad Payment request alert title -->
   <string name="PaymentProtocol.Errors.badPaymentRequest">假的付款请求</string>
   <!-- Error opening payment protocol file message -->
@@ -279,9 +279,9 @@
   <!-- Payment too small alert title -->
   <string name="PaymentProtocol.Errors.smallOutputError">无法付款</string>
   <!-- Amount too small error message -->
-  <string name="PaymentProtocol.Errors.smallPayment">莱特币支付不能小于%1$s。</string>
+  <string name="PaymentProtocol.Errors.smallPayment">地球币支付不能小于%1$s。</string>
   <!-- Output too small error message. -->
-  <string name="PaymentProtocol.Errors.smallTransaction">莱特币交易输出不能小于 %1$s。</string>
+  <string name="PaymentProtocol.Errors.smallTransaction">地球币交易输出不能小于 %1$s。</string>
   <!-- Unsupported signature type payment protocol error message -->
   <string name="PaymentProtocol.Errors.unsupportedSignatureType">不受支持的签名类型</string>
   <!-- Untrusted certificate payment protocol error message -->
@@ -321,7 +321,7 @@
   <!-- Upgrade PIN prompt title. -->
   <string name="Prompts.UpgradePin.title">升级 PIN</string>
   <!-- Notifications will be added later but users can set their preferences now, which is why we specify "in the future". -->
-  <string name="PushNotifications.body">打开推送通知，以便将来从 Loaf 接收特殊消息。</string>
+  <string name="PushNotifications.body">打开推送通知，以便将来从 Eacpay 接收特殊消息。</string>
   <!-- Push notifications toggle switch label -->
   <string name="PushNotifications.label">推送通知</string>
   <!-- Push notifications are off label -->
@@ -379,7 +379,7 @@
   <!-- extimated time -->
   <string name="ReScan.body1">20-45 分钟</string>
   <!-- Syncing explanation -->
-  <string name="ReScan.body2">如果某次交易在莱特币网络上显示为已完成，却不在您的 Loaf 里。</string>
+  <string name="ReScan.body2">如果某次交易在地球币网络上显示为已完成，却不在您的 Eacpay 里。</string>
   <!-- Syncing explanation -->
   <string name="ReScan.body3">你反复得到交易被拒绝的出错信息。</string>
   <!-- Start Sync button label -->
@@ -405,17 +405,17 @@
   <!-- Security Center Info -->
   <string name="SecurityCenter.info">启用所有安全功能以获得最大保护。</string>
   <!-- Paper Key button description -->
-  <string name="SecurityCenter.paperKeyDescription">若您丢失或升级您的手机，访问您的莱特币的唯一方法。</string>
+  <string name="SecurityCenter.paperKeyDescription">若您丢失或升级您的手机，访问您的地球币的唯一方法。</string>
   <!-- Paper Key button title -->
   <string name="SecurityCenter.paperKeyTitle">纸键</string>
   <!-- PIN button description -->
-  <string name="SecurityCenter.pinDescription">保护您的 Loaf 免遭未授权用户盗用。</string>
+  <string name="SecurityCenter.pinDescription">保护您的 Eacpay 免遭未授权用户盗用。</string>
   <!-- PIN button title -->
   <string name="SecurityCenter.pinTitle">6 位 PIN</string>
   <!-- Security Center Title -->
   <string name="SecurityCenter.title">安全中心</string>
   <!-- Touch ID button description -->
-  <string name="SecurityCenter.touchIdDescription">方便地解锁 Loaf，在设定限额下汇钱。</string>
+  <string name="SecurityCenter.touchIdDescription">方便地解锁 Eacpay，在设定限额下汇钱。</string>
   <!-- Touch ID button title -->
   <string name="SecurityCenter.touchIdTitle">触摸 ID</string>
   <!-- Security center fingerprint authentication button -->
@@ -425,7 +425,7 @@
   <!-- Balance: $4.00 -->
   <string name="Send.balance">余额：%1$s</string>
   <!-- Instructions how to allow the camera access for the app -->
-  <string name="Send.cameraUnavailabeMessage.android">在“设置”&gt;“应用”&gt;“Loaf”&gt;“权限”中允许访问相机</string>
+  <string name="Send.cameraUnavailabeMessage.android">在“设置”&gt;“应用”&gt;“Eacpay”&gt;“权限”中允许访问相机</string>
   <!-- Permission required to access camera -->
   <string name="Send.cameraUnavailabeTitle.android">Loaf 没有访问相机的权限</string>
   <!-- Camera not allowed message -->
@@ -445,9 +445,9 @@
   <!-- Payee identity not certified alert title. -->
   <string name="Send.identityNotCertified">收款人身份未经认证。</string>
   <!-- Invalid address alert message -->
-  <string name="Send.invalidAddressMessage">目标地址不是有效的莱特币地址。</string>
+  <string name="Send.invalidAddressMessage">目标地址不是有效的地球币地址。</string>
   <!-- Invalid address on pasteboard message -->
-  <string name="Send.invalidAddressOnPasteboard">粘贴板中没有有效的莱特币地址</string>
+  <string name="Send.invalidAddressOnPasteboard">粘贴板中没有有效的地球币地址</string>
   <!-- Invalid address alert title -->
   <string name="Send.invalidAddressTitle">无效地址</string>
   <!-- Is rescanning error message -->
@@ -473,7 +473,7 @@
   <!-- Send money to label -->
   <string name="Send.toLabel">至</string>
   <!-- Adress already used alert message - first part -->
-  <string name="Send.UsedAddress.firstLine">莱特币地址仅供一次性使用。</string>
+  <string name="Send.UsedAddress.firstLine">地球币地址仅供一次性使用。</string>
   <!-- Adress already used alert message - second part -->
   <string name="Send.UsedAddress.secondLIne">重复使用会削弱您和收件人的隐私，如果收件人不直接控制地址，可能会导致损失。</string>
   <!-- Adress already used alert title -->
@@ -487,7 +487,7 @@
   <!-- Join Early access label -->
   <string name="Settings.earlyAccess">加入早期访问</string>
   <!-- Are you enjoying Loaf alert message body -->
-  <string name="Settings.enjoying">您喜欢 Loaf 吗？</string>
+  <string name="Settings.enjoying">您喜欢 Eacpay 吗？</string>
   <!-- Import wallet label -->
   <string name="Settings.importTitle">导入钱包</string>
   <!-- Manage settings section header -->
@@ -511,7 +511,7 @@
   <!-- Start or recover another wallet menu label. -->
   <string name="Settings.wipe">开始/恢复另一钱包</string>
   <!-- Share data view body -->
-  <string name="ShareData.body">同我们分享您的匿名数据来帮助改善 Loaf。这不包括任何财务信息。我们尊重您的财务隐私。</string>
+  <string name="ShareData.body">同我们分享您的匿名数据来帮助改善 Eacpay。这不包括任何财务信息。我们尊重您的财务隐私。</string>
   <!-- Share data header -->
   <string name="ShareData.header">共享数据？</string>
   <!-- Share data switch label. -->
@@ -519,13 +519,13 @@
   <!-- button label -->
   <string name="StartPaperPhrase.againButtonTitle">再次书写纸键</string>
   <!-- Paper key explanation text. -->
-  <string name="StartPaperPhrase.body">如果您的手机丢失、被盗、损坏或升级，纸上密钥是恢复 Loaf 的唯一方法。\n\n\n我们将向您显示一张单词表，请将其写在纸上并保存在安全的地方。</string>
+  <string name="StartPaperPhrase.body">如果您的手机丢失、被盗、损坏或升级，纸上密钥是恢复 Eacpay 的唯一方法。\n\n\n我们将向您显示一张单词表，请将其写在纸上并保存在安全的地方。</string>
   <!-- button label -->
   <string name="StartPaperPhrase.buttonTitle">写下纸键</string>
   <!-- Argument is date -->
   <string name="StartPaperPhrase.date">您最后一次记录纸上密钥是在 %1$s</string>
   <!-- Start view message -->
-  <string name="StartViewController.message">使用莱特币最安全且最可靠的方式。</string>
+  <string name="StartViewController.message">使用地球币最安全且最可靠的方式。</string>
   <!-- Syncing view connectiong state header text -->
   <string name="SyncingView.connecting">连接中</string>
   <!-- Syncing view header text -->
@@ -551,13 +551,13 @@
   <!-- Fingerprint Is Not Setup -->
   <string name="TouchIdSettings.disabledWarning.title.android">指纹认证未启用</string>
   <!-- Touch Id screen label -->
-  <string name="TouchIdSettings.label">请用指纹解锁 Loaf 并在设定限额下汇钱。</string>
+  <string name="TouchIdSettings.label">请用指纹解锁 Eacpay 并在设定限额下汇钱。</string>
   <!-- Link Text (see TouchIdSettings.customizeText) -->
   <string name="TouchIdSettings.linkText">Touch ID 支出限额屏幕</string>
   <!-- Spending Limit: b100,000 ($100) -->
   <string name="TouchIdSettings.spendingLimit">支出限制：%1$s (%2$s)</string>
   <!-- Touch id switch label. -->
-  <string name="TouchIdSettings.switchLabel">针对 Loaf 启用触摸 ID</string>
+  <string name="TouchIdSettings.switchLabel">针对 Eacpay 启用触摸 ID</string>
   <!-- Enable fingerprint for this wallet called Loaf -->
   <string name="TouchIdSettings.switchLabel.android">指纹认证</string>
   <!-- Touch ID settings view title -->
@@ -635,7 +635,7 @@
   <!-- "Sent [$5] to [address]" => This is the "to [address]" part. -->
   <string name="TransactionDetails.to">到 %1$s</string>
   <!-- Transaction ID header -->
-  <string name="TransactionDetails.txHashHeader">莱特币交易 ID</string>
+  <string name="TransactionDetails.txHashHeader">地球币交易 ID</string>
   <!-- (this transaction was) Received at this address: -->
   <string name="TransactionDirection.address">已在此地址接收</string>
   <!-- (this transaction was) Sent to this address: -->
@@ -663,9 +663,9 @@
   <!-- Wallet unlocked message -->
   <string name="UnlockScreen.unlocked">钱包已解锁</string>
   <!-- Update PIN caption text -->
-  <string name="UpdatePin.caption">请牢记此 PIN 码。如果您忘记，您将无法访问您的莱特币。</string>
+  <string name="UpdatePin.caption">请牢记此 PIN 码。如果您忘记，您将无法访问您的地球币。</string>
   <!-- PIN creation info. -->
-  <string name="UpdatePin.createInstruction">您的 PIN 码将用于解锁您的 Loaf 并发送款项。</string>
+  <string name="UpdatePin.createInstruction">您的 PIN 码将用于解锁您的 Eacpay 并发送款项。</string>
   <!-- Update PIN title -->
   <string name="UpdatePin.createTitle">设置 PIN 码</string>
   <!-- Update PIN title -->
@@ -699,7 +699,7 @@
   <!-- Authorize transaction with touch id message -->
   <string name="VerifyPin.touchIdMessage">授权此交易</string>
   <!-- 'No wallet' warning for watch app -->
-  <string name="Watch.noWalletWarning">打开 Loaf iPhone app 以设置您的钱包。</string>
+  <string name="Watch.noWalletWarning">打开 Eacpay iPhone app 以设置您的钱包。</string>
   <!-- Dismiss button label -->
   <string name="Webview.dismiss">忽略</string>
   <!-- Webview loading error message -->
@@ -707,9 +707,9 @@
   <!-- Updating webview message -->
   <string name="Webview.updating">正在更新...</string>
   <!-- Welcome screen text. (?) will be replaced with the help icon users should look for. -->
-  <string name="Welcome.body">Loafwallet 更名为 Loaf， 并增加了全新的界面和功能。如果您需要帮助，请使用在大多数设备屏幕右上角的(?)</string>
+  <string name="Welcome.body">Eacwallet 更名为 Eacpay， 并增加了全新的界面和功能。如果您需要帮助，请使用在大多数设备屏幕右上角的(?)</string>
   <!-- Top title of welcome screen -->
-  <string name="Welcome.title">欢迎使用Loaf！</string>
+  <string name="Welcome.title">欢迎使用Eacpay！</string>
   <!-- Wipe wallet alert message -->
   <string name="WipeWallet.alertMessage">您确认要删除此钱包吗？</string>
   <!-- Wipe wallet alert title -->
@@ -721,9 +721,9 @@
   <!-- Enter phrase to wipe wallet instruction. -->
   <string name="WipeWallet.instruction">输入此钱包的恢复短语以擦除并启动或恢复另一钱包。您的当前余额将保留。</string>
   <!-- Start wipe wallet view message -->
-  <string name="WipeWallet.startMessage">开始或恢复另一个钱包能让你在这个设备上管理和使用不同的Loaf钱包</string>
+  <string name="WipeWallet.startMessage">开始或恢复另一个钱包能让你在这个设备上管理和使用不同的Eacpay钱包</string>
   <!-- Start wipe wallet view warning -->
-  <string name="WipeWallet.startWarning">您无法再在这个设备上使用现在的Loaf钱包。 现在的一切资金都留在纸键上。</string>
+  <string name="WipeWallet.startWarning">您无法再在这个设备上使用现在的Eacpay钱包。 现在的一切资金都留在纸键上。</string>
   <!-- Wipe wallet navigation item title. -->
   <string name="WipeWallet.title">启动或恢复另一钱包</string>
   <!-- Wipe wallet button title -->
@@ -738,7 +738,7 @@
   <string name="WritePaperPhrase.previous">上一步</string>
   <!-- 1 of 3 -->
   <string name="WritePaperPhrase.step">%1$d / %2$d</string>
-    <string name="Donate.title">点击捐赠给莱特币基金会 (%1$s)</string>
+    <string name="Donate.title">点击捐赠给地球币基金会 (%1$s)</string>
   <string name="Donate.title.confirmation">确认捐赠</string>
   <string name="Confirmation.processingAndDonationTime">处理时间：这些交易将花费 %1$s 分钟来处理。</string>
   <string name="Confirmation.donateLabel">捐款金额:</string>
