--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -738,7 +738,7 @@
   <string name="WritePaperPhrase.previous">上一步</string>
   <!-- 1 of 3 -->
   <string name="WritePaperPhrase.step">%1$d / %2$d</string>
-    <string name="Donate.title">点击捐赠给地球币基金会 (%1$s)</string>
+    <string name="Donate.title">点击捐赠给EACPAY开发者 (%1$s)</string>
   <string name="Donate.title.confirmation">确认捐赠</string>
   <string name="Confirmation.processingAndDonationTime">处理时间：这些交易将花费 %1$s 分钟来处理。</string>
   <string name="Confirmation.donateLabel">捐款金额:</string>
